--- a/app1/templates/index.html
+++ b/app1/templates/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
     <head>
 
-        {% load static %}
+        
 
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -10,13 +11,13 @@
         <meta name="author" content="" />
         <title>Inicio</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{%static 'startbootstrap-grayscale-gh-pages/assets/favicon.ico' %}" />
+        <link rel="icon" type="image/x-icon" href="{%static 'assets/favicon.ico' %}" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="{%static 'startbootstrap-grayscale-gh-pages/css/styles.css' %}" rel="stylesheet" />
+        <link href="{%static 'css/styles.css' %}" rel="stylesheet" />
 
 
     </head>
@@ -25,6 +26,7 @@
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container">
                 <a class="navbar-brand" href="#!">Bienvenidos</a>
+                <a class="btn btn-primary" href="{% url 'crear_tecnologia' %}">Agregar Objeto</a>
                 <a class="btn btn-primary" href="{% url 'login' %}">Ingresar</a>
             </div>
         </nav>
