--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -3,4 +3,5 @@
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Iniciar sesión</button>
+    <p>¿No tienes una cuenta? <a href="{% url 'register_view' %}">Regístrate aquí</a>.</p>
 </form>
